feat: Update execution transition
