# agents-api/agents_api/autogen/openapi_model.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2024-06-27T12:10:13+00:00
+#   timestamp: 2024-07-02T07:16:16+00:00
 
 from __future__ import annotations
 
@@ -413,8 +413,8 @@ class ResponseFormat(BaseModel):
     """
 
 
-class Stop(RootModel[List[str]]):
-    root: Annotated[List[str], Field(max_length=4, min_length=1)]
+class Stop(RootModel[List[Any]]):
+    root: Annotated[List[Any], Field(max_length=4, min_length=1)]
     """
     Up to 4 sequences where the API will stop generating further tokens.
 
@@ -859,15 +859,12 @@ class ChatMLImageContentPart(BaseModel):
 
 
 class CELObject(BaseModel):
-    pass
-    model_config = ConfigDict(
-        extra="allow",
-    )
-
-
-class YieldWorkflowStep(BaseModel):
     workflow: str
     arguments: CELObject
+
+
+class YieldWorkflowStep(CELObject):
+    pass
 
 
 class ToolCallWorkflowStep(BaseModel):
@@ -909,6 +906,48 @@ class ToolResponse(BaseModel):
     Optional Tool ID
     """
     output: Dict[str, Any]
+
+
+class Type3(str, Enum):
+    """
+    Transition type
+    """
+
+    finish = "finish"
+    wait = "wait"
+    error = "error"
+    step = "step"
+
+
+class UpdateExecutionTransitionRequest(BaseModel):
+    """
+    Update execution transition request schema
+    """
+
+    type: Type3
+    """
+    Transition type
+    """
+    from_: Annotated[List[str | int], Field(alias="from", max_length=2, min_length=2)]
+    """
+    From state
+    """
+    to: Annotated[List[str | int] | None, Field(None, max_length=2, min_length=2)]
+    """
+    To state
+    """
+    output: Dict[str, Any]
+    """
+    Execution output
+    """
+    task_token: str | None = None
+    """
+    Task token
+    """
+    metadata: Dict[str, Any] | None = None
+    """
+    Custom metadata
+    """
 
 
 class Agent(BaseModel):
@@ -1143,6 +1182,11 @@ class PatchToolRequest(BaseModel):
 class Execution(BaseModel):
     id: UUID
     task_id: UUID
+    created_at: UUID
+    arguments: Dict[str, Any]
+    """
+    JSON Schema of parameters
+    """
     status: Annotated[
         str,
         Field(pattern="^(queued|starting|running|awaiting_input|succeeded|failed)$"),
@@ -1150,36 +1194,22 @@ class Execution(BaseModel):
     """
     Execution Status
     """
-    arguments: Dict[str, Any]
-    """
-    JSON of parameters
-    """
-    user_id: UUID | None = None
-    session_id: UUID | None = None
-    created_at: AwareDatetime
-    updated_at: AwareDatetime
 
 
 class ExecutionTransition(BaseModel):
     id: UUID
     execution_id: UUID
-    type: Annotated[str, Field(pattern="^(finish|wait|error|step)$")]
-    """
-    Execution Status
-    """
-    from_: Annotated[List[str | int], Field(alias="from")]
-    to: List[str | int]
-    task_token: str | None = None
+    created_at: AwareDatetime
     outputs: Dict[str, Any]
     """
     Outputs from an Execution Transition
     """
-    metadata: Dict[str, Any] | None = None
+    from_: Annotated[List[str | int], Field(alias="from")]
+    to: List[str | int]
+    type: Annotated[str, Field(pattern="^(finish|wait|error|step)$")]
     """
-    (Optional) metadata
+    Execution Status
     """
-    created_at: AwareDatetime
-    updated_at: AwareDatetime | None = None
 
 
 class PromptWorkflowStep(BaseModel):
@@ -1236,9 +1266,6 @@ class Task(BaseModel):
     Describes a Task
     """
 
-    model_config = ConfigDict(
-        extra="allow",
-    )
     name: str
     """
     Name of the Task
@@ -1271,5 +1298,8 @@ class Task(BaseModel):
     ID of the Task
     """
     created_at: AwareDatetime
-    updated_at: AwareDatetime | None = None
     agent_id: UUID
+
+
+CELObject.model_rebuild()
+YieldWorkflowStep.model_rebuild()
